user/logs/stride-200911_223720.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Cool Cat\Documents\GitHub\Toontown-Mystery-the-Game-\toontown\toonbase\ToontownStart.py", line 176, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 47, in <module>
    import PlayGame
  File "toontown\distributed\PlayGame.py", line 19, in <module>
    from toontown.hood import SellbotHQ, CashbotHQ, LawbotHQ, BossbotHQ
  File "toontown\hood\LawbotHQ.py", line 1, in <module>
    from toontown.coghq.LawbotCogHQLoader import LawbotCogHQLoader
  File "toontown\coghq\LawbotCogHQLoader.py", line 5, in <module>
    import StageInterior
  File "toontown\coghq\StageInterior.py", line 14, in <module>
    from toontown.coghq import DistributedStage
  File "toontown\coghq\DistributedStage.py", line 11, in <module>
    from toontown.coghq import DistributedStageRoom, StageLayout, StageRoom
  File "toontown\coghq\DistributedStageRoom.py", line 8, in <module>
    import StageRoomBase, StageRoom
  File "toontown\coghq\StageRoom.py", line 5, in <module>
    from toontown.coghq import StageRoomSpecs
  File "toontown\coghq\StageRoomSpecs.py", line 5, in <module>
    from toontown.coghq import LawbotOfficeOilRoom_Battle01_Cogs
  File "toontown\coghq\LawbotOfficeOilRoom_Battle01_Cogs.py", line 12
    'battleCell': BattleCellId,
                ^
SyntaxError: invalid syntax
